@@ -17,6 +17,7 @@
 - "social activity" posts now show official new/reply icons next to them
 - Added new filters for page edits + page creation
 	- Made it so if logs + page edits + page creation are all unselected then recentchanges won't load; this can allow viewing only discussions/abuse logs
+- Abuse logs filter now only shows on options panel if at least one wiki on the list uses the extension
 
 
 == 2.16 - 21 August 2021 ==
